--- a/src/styles/snippets/_stream.scss
+++ b/src/styles/snippets/_stream.scss
@@ -1,13 +1,16 @@
 .stream {
+  padding-left: 0;
+  padding-right: 0;
+
   .post {
     float: left;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 25px;
 
     .home &:before {
-      width: calc(100% - 20px);
-      left: 10px;
+      width: calc(100% - 40px);
+      left: 20px;
     }
 
     &:first-of-type:before {
